tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/InterviewQuestionLibrary__c.object-meta.xml
<CustomObject>
    <label>InterviewQuestionLibrary</label>
    <nameField>
        <label>InterviewQuestionLibrary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterviewQuestionLibraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>