tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Allow_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Allow_Carry_Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, downstream template questions copied from this library entry should be configured for carry-forward resolution.</description>
    <label>Allow Carry Forward</label>
    <type>Checkbox</type>
</CustomField>