tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>TextArea</type>
</CustomField>