tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <type>TextArea</type>
</CustomField>