tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Do_Not_Archive__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Archive</label>
    <type>Checkbox</type>
</CustomField>