tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Latest_Approved_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Approved_Version__c</fullName>
    <label>Latest Approved Version</label>
    <type>TextArea</type>
</CustomField>