tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Maps_to_Field__c.field-meta.xml
<CustomField>
    <fullName>Maps_to_Field__c</fullName>
    <label>Maps to Field</label>
    <type>TextArea</type>
</CustomField>