tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Maps_to_Object__c.field-meta.xml
<CustomField>
    <fullName>Maps_to_Object__c</fullName>
    <label>Maps to Object</label>
    <type>TextArea</type>
</CustomField>