tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Protected__c.field-meta.xml
<CustomField>
    <fullName>Protected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protected</label>
    <type>Checkbox</type>
</CustomField>