tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <externalId>true</externalId>
    <label>Question Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>