tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Requires_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, downstream template questions copied from this library entry should require explicit carry-forward review.</description>
    <label>Requires Review</label>
    <type>Checkbox</type>
</CustomField>