tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <type>TextArea</type>
</CustomField>