tgthrProgramManagement/force-app/main/default/objects/InterviewQuestionLibrary__c/validationRules/Question_Key_Immutable.validationRule-meta.xml
<ValidationRule>
    <fullName>Question_Key_Immutable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Question_Key__c))</errorConditionFormula>
    <errorMessage>The Question Key is immutable and cannot be changed after creation.</errorMessage>
</ValidationRule>